Gung: fixed css for leftmenu align left, sticky

--- a/docroot/profiles/custom/webny/themes/custom/dfs_ny/sass/components/_body.scss
+++ b/docroot/profiles/custom/webny/themes/custom/dfs_ny/sass/components/_body.scss
@@ -323,3 +323,10 @@ figure.embedded-entity.align-center {
     padding-left: 0; // width: 100%;
   }
 }
+
+@media (max-width: 719px) {
+  main .body-area .body-area-in {
+      margin-top: 90px;
+    }
+  
+}
